# opencoder

./: .gitignore  Cargo.toml  LICENSE  README.en.md  README.md  agents.md
agents/cli/: index.md
agents/core/: index.md
agents/llm/: index.md
agents/session/: index.md
agents/store/: index.md
agents/tui/: index.md
agents/web/: index.md
crates/cli/: Cargo.toml
crates/cli/src/: client.rs  exit_tips.rs  lib.rs  run.rs  serve.rs  server.rs  session_cmd.rs
crates/cli/src/ts/: actions.rs  display.rs  env.rs  mod.rs  naming.rs  tmux.rs
crates/cli/tests/: cli_parse.rs  fork_session.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs  remote.rs  sse.rs
crates/core/: Cargo.toml
crates/core/assets/skills/chrome-headless/: SKILL.md
crates/core/assets/skills/do-and-done/: SKILL.md
crates/core/assets/skills/repo-local-memory/: EXAMPLES.md  SKILL.md  TEMPLATES.md
crates/core/assets/skills/review/: SKILL.md
crates/core/assets/skills/ssh-pty/: SKILL.md
crates/core/assets/skills/submit/: SKILL.md
crates/core/src/: agent.rs  computer_use.rs  config.rs  error.rs  json.rs  lib.rs  message.rs  net.rs  skill.rs  sse.rs  tool.rs  tool_guard_config.rs
crates/core/tests/: config_contract.rs  message_image.rs  skill_contract.rs  tool_filter.rs
crates/llm/: Cargo.toml
crates/llm/src/: client.rs  event.rs  lib.rs  message.rs  mock.rs  request.rs  schema.rs  sse.rs  stream.rs  tokens.rs  tool_call.rs
crates/llm/tests/: headers.rs  lower_messages.rs  mock_contract.rs  request_body.rs  stream_timeout.rs
crates/session/: Cargo.toml
crates/session/src/: bash_guard.rs  compaction.rs  event_sink.rs  lib.rs  plan_handoff.rs  prompt.rs  resume.rs  runner.rs  tool_guard.rs
crates/session/src/runner/: event.rs  mod.rs  subagent.rs
crates/session/src/tools/: bash.rs  chrome_headless.rs  computer_use.rs  edit.rs  glob.rs  grep.rs  latent.rs  ls.rs  mod.rs  plan.rs  read.rs  ssh_pty.rs  ssh_pty_tests.rs  task.rs  web_fetch.rs  web_read.rs  web_search.rs  write.rs
crates/session/tests/: bash_guard_plan_mode.rs  cache_salt.rs  cancel_reset.rs  capabilities_and_tools.rs  compaction_and_model.rs  config_reload.rs  event_sink_flusher.rs  handoff_resume.rs  hard_abort.rs  image_request.rs  interleaved_thinking.rs  latent_tools.rs  plan_act_dup_check.rs  plan_handoff.rs  plan_mode_subagent_guard.rs  prompt.rs  quit_while_running.rs  recovery.rs  resume_reconcile.rs  resume_replay.rs  skill_mid_run.rs  skill_resume.rs  steer_followup.rs  subagent.rs  subagent_interleaved_thinking.rs  tool_failure_guard.rs  tools_contract.rs
crates/store/: Cargo.toml
crates/store/src/: bundle.rs  import.rs  jsonl.rs  lib.rs  session_store.rs  store.rs  types.rs
crates/store/src/libsql_store/: events.rs  inputs.rs  messages.rs  mod.rs  schema.rs  sessions.rs  subagent_tasks.rs  tx.rs
crates/store/tests/: concurrent_serialized.rs  images_persistence.rs  inputs_integration.rs  schema_v4_migration.rs  store_integration.rs  store_perf.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  app_helpers.rs  app_helpers_tests.rs  app_loop.rs  app_loop_tests.rs  app_task.rs  app_tests.rs  chat.rs  chat_tests.rs  chat_types.rs  command.rs  composer.rs  fmt.rs  input.rs  key_handler.rs  keybind.rs  lib.rs  markdown.rs  menu.rs  queue_panel.rs  render.rs  render_tests.rs  selection.rs  session_ui.rs  skill_token.rs  state.rs  subagent_tests.rs  task.rs  terminal.rs  worker.rs
crates/tui/src/cache_salt_menu/: mod.rs  state.rs  view.rs
crates/tui/src/model_menu/: config_form.rs  headers.rs  list.rs  mod.rs  patch.rs  provider_form.rs  state.rs  view.rs
crates/tui/src/model_menu/tests/: common.rs  config_tests.rs  mod.rs  provider_tests.rs
crates/tui/tests/: input_pty.rs  input_pty_incomplete.rs  plan_act_handoff.rs  plan_card_dedup.rs  plan_card_full_flow.rs  subagent_context_isolation.rs  subagent_replay.rs
crates/tui/tests/common/: mod.rs
crates/web/: Cargo.toml
crates/web/src/: api.rs  auth.rs  handle.rs  html.rs  lib.rs  manager.html
crates/web/tests/: auth.rs  client_e2e.rs  replay_fidelity.rs  web_contract.rs  web_drain_contract.rs
docs/: perf.md
docs/bench/opencode-vs-opencoder-2026-07-19/: CONCLUSION.md  README.md  opencode_snake_cpu.csv  opencoder_snake_cpu.csv
features/: index.md
features/changelog/2026-07-05/: iteration2-storage-model-config-steer-web.md  iteration3-tui-overhaul.md  iteration4-test-coverage-rules.md  iteration4-tui-ux-hardabort.md  model-command-and-reasoning-effort.md  skill-picker.md  subagent-and-tool-refactor.md  tui-context-mixing-scroll-quit.md  tui-major-overhaul.md
features/changelog/2026-07-06/: compact-clear-display-session-bundle.md  plan-act-handoff-compact.md
features/changelog/2026-07-07/: concurrent-subagent-dispatch.md  newline-fallback-and-queue-reorder.md  queue-consume-mirror-and-integrity.md  thinking-click-toggle.md
features/changelog/2026-07-09/: compression-token-estimate-fix.md  scrollbar-alignment-fix.md  subagent-foldable-concurrency-ctxswitch.md
features/changelog/2026-07-11/: cancel-token-reset.md  compaction-prompt-and-token-tracking.md  e2e-expansion-and-fork-fix.md  go-live-fixes-fmt-and-compact-noop.md  interleaved-thinking.md  slash-popup-ux.md  subagent-view-and-ctrl-d-fix.md  web-go-live-sse-handle-loopback-stable-hash.md
features/changelog/2026-07-12/: e2e-deep-contracts-and-session-show-json.md  e2e-fill-and-memory-sync.md  inline-skill-tokens-ctrl-ale-agents-md.md  parallel-tool-output-id-routing.md  plan-act-handoff-clear-context.md  plan-mode-subagent-guard-hardening.md  replay-reconstructs-tool-blocks.md  skill-mid-run-fix.md  skill-only-submit-starts-turn.md  steer-consumed-seq-mismatch-fix.md  task-picker-clear-all.md  tui-freeze-rootcause.md  tui-parent-ctx-excludes-subagent.md  (+2 more)
rules/: 01-mandatory-tests.md  02-regression-gate.md  03-test-pyramid.md  README.md
scripts/: e2e-glm.sh  e2e_glm.py  install-skills-dep.sh  install.sh  opencoder-to-opencode-stats.py  test-stats-sync.py
scripts/e2e/: cli_scenarios.py  lib.py  test_install.sh  web_scenarios.py
src/: main.rs
(+52 files in other folders)
