[package]
name = "opencode-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opencode-core.workspace = true
opencode-llm.workspace = true
opencode-session.workspace = true
opencode-store.workspace = true
opencode-web.workspace = true
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
dirs.workspace = true
