[package]
name = "opencoder-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opencoder-core.workspace = true
opencoder-llm.workspace = true
opencoder-session.workspace = true
opencoder-store.workspace = true
opencoder-web.workspace = true
opencoder-client.workspace = true
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
dirs.workspace = true
ulid.workspace = true
base64.workspace = true
