[package]
name = "opencode-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
chrono.workspace = true
tracing.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true
serde_json.workspace = true
