[package]
name = "opencode-session"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opencode-core.workspace = true
opencode-llm.workspace = true
opencode-store.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util = { workspace = true, features = ["rt"] }
futures.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
glob.workspace = true
regex.workspace = true
ulid.workspace = true

[dev-dependencies]
tempfile.workspace = true
