[package]
name = "opencoder-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opencoder-core.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
tokio.workspace = true
async-trait.workspace = true
libsql.workspace = true

[dev-dependencies]
tempfile.workspace = true
libsql.workspace = true
