[package]
name = "opencode-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opencode-core.workspace = true
opencode-llm.workspace = true
opencode-session.workspace = true
opencode-store.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
futures.workspace = true
anyhow.workspace = true
serde_json.workspace = true
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
pulldown-cmark.workspace = true
crossterm = { version = "0.28", features = ["event-stream"] }
dirs = "5"

[dev-dependencies]
tempfile = "3"
