[package]
name = "opencoder-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opencoder-core.workspace = true
opencoder-llm.workspace = true
opencoder-session.workspace = true
opencoder-store.workspace = true
tokio.workspace = true
tokio-util.workspace = true
anyhow.workspace = true
serde_json.workspace = true
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
pulldown-cmark.workspace = true
crossterm = "0.28"
dirs = "5"

[dev-dependencies]
tempfile = "3"
libc = "0.2"
