[package]
name = "opencoder-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opencoder-core.workspace = true
opencoder-llm.workspace = true
opencoder-session.workspace = true
opencoder-store.workspace = true
tokio.workspace = true
tokio-stream = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true, features = ["rt"] }
futures.workspace = true
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
dirs.workspace = true
chrono.workspace = true
uuid = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
reqwest = { workspace = true }
tower = { version = "0.5", features = ["util"] }
uuid = { workspace = true }
